Avoid overlapping containers after "bli variant" if missing image

--- a/src/index/index.module.css
+++ b/src/index/index.module.css
@@ -128,7 +128,7 @@
     margin-left: 50%;
   }
   .services img + article {
-    margin-top: -10rem;
+    margin-top: 0;
   }
 }
 
